# ProjectMobius

./: .gitignore  ASSET_LICENSES.md  LICENSE  LICENSE.md  README.md  SUMMARY-OF-FOLDER-STRUCTURE-&-LICENSE.md
ASSIMP_5.4.3/: README.md
ASSIMP_5.4.3/Win64/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  UpdateAssimpLibsDebugSymbolsAndDLLs.vcxproj  UpdateAssimpLibsDebugSymbolsAndDLLs.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
ASSIMP_5.4.3/Win64/code/: INSTALL.vcxproj  INSTALL.vcxproj.filters  assimp.vcxproj  assimp.vcxproj.filters  cmake_install.cmake
ASSIMP_5.4.3/Win64/include/assimp/: revision.h
ASSIMP_5.4.3/Win64/test/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  unit.vcxproj  unit.vcxproj.filters
BuildDocs/: LICENSE  SUMMARY-OF-FOLDER-STRUCTURE-&-LICENSE.md
DemoProgressVideos/: LICENSE.txt
DemoProgressVideos/Datasmith/: 2024-12-11 10-40-08.mkv
HDF5/: LICENSE.txt
HelpfulTextDocs/: Blur downsampling upsampling.docx  ImplementingHDF5 into unreal.docx  LICENSE.txt  MobiusToDo.docx  SIMD Enhancement Using Unreal.docx  UI Text Doc.txt
ImportedOpenSourceAssets/: Arrow.xcf  LICENSE.txt
TestData/: ISO-Test-1-2x3.ifc  ISO-Test-1-3DView.fbx  ISO-Test-8-r25.fbx  LICENSE.txt  voronoi test.xcf
UnrealFolder/: README.md
UnrealFolder/ProjectMobius/: ProjectMobius.uproject
UnrealFolder/ProjectMobius/Tools/QT_Apps/OpenFileTCP/: .gitignore  CMakeLists.txt  main.cpp
samples/wkt/: gallery.wkt  routing.wkt
(+2797 files in other folders)
